--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 .tile {
 	border: 2px solid black;
-	height: 100;
-	width: 100;
+	height: 100px;
+	width: 100px;
+	list-style-type: none;
+	display: inline-flex;
 }
 
 .tile.inactive {
