--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+body {
+	width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
 .tile {
 	border: 2px solid black;
 	height: 100px;
